syntax = "proto3";
option go_package = "competition/simple";

service SimpleGame {
  rpc joined(JoinedIn) returns (JoinedOut) {}
}

message JoinedIn {
  string instanceID = 1;
  string playerID = 2;
}

message JoinedOut {
  bool won = 1;
}
